--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,8 @@ services:
   dbt:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: ./docker/Dockerfile
     volumes:
       - .:/usr/src/app
     env_file:
       - .env
-    command: ["run", "--profiles-dir", "/usr/src/app/profiles"]
