--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.12-slim
+FROM --platform=linux/amd64 python:3.12.1-slim-bookworm
 
 WORKDIR /usr/src/app
 
@@ -18,11 +18,18 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
     DBT_PROFILES_DIR=/usr/src/app/dbt/profiles
 
 # Install dbt and Snowflake adapter with specific versions for stability
+# NOTE: lower versions
+#    messagetodict () got an unexpected keyword argument including_default_value_fields
 RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir dbt-core~=1.7.0 dbt-snowflake~=1.7.0 boto3
+    pip install --no-cache-dir \
+    dbt-core==1.4.7 \
+    dbt-snowflake==1.4.5 \
+    boto3==1.34.11 \
+    protobuf==3.20.3
 
 # Copy only the dbt project files (not the entire directory)
 COPY dbt/ /usr/src/app/dbt/
+COPY .ssh/ /usr/src/app/.ssh/
 
 # Create directory for logs
 RUN mkdir -p /usr/src/app/logs
