--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -4,8 +4,12 @@ services:
   dbt:
     build:
       context: .
-      dockerfile: ./docker/Dockerfile
+      dockerfile: ./docker/Dockerfile.local
     volumes:
       - .:/usr/src/app
     env_file:
       - .env
+    environment: # ←追加
+      - NO_PROXY=.snowflakecomputing.com
+      # ――学習用に OCSP を fail-open する場合だけ――
+      # - SF_OCSP_FAIL_OPEN=true
