--- a/docker/Dockerfile.local
+++ b/docker/Dockerfile.local
@@ -1,6 +1,6 @@
 FROM python:3.12-slim
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src/app/dbt
 
 # Install system dependencies
 RUN apt-get update && \
@@ -17,4 +17,4 @@ COPY . .
 
 # Default command
 ENTRYPOINT ["dbt"]
-CMD ["run", "--profiles-dir", "/usr/src/app/profiles"]
+CMD ["run", "--profiles-dir", "/usr/src/app/dbt/profiles"]
