--- a/dbt/profiles/profiles.yml
+++ b/dbt/profiles/profiles.yml
@@ -4,6 +4,7 @@ dbt_snowflake:
     dev:
       type: snowflake
       account: "{{ env_var('DBT_SNOWFLAKE_ACCOUNT') }}"
+      host: "{{ env_var('DBT_SNOWFLAKE_HOST') }}"
       user: "{{ env_var('DBT_SNOWFLAKE_USER') }}"
       # Use key pair authentication instead of password authentication
       private_key_path: "{{ env_var('DBT_SNOWFLAKE_PRIVATE_KEY_PATH') }}"
@@ -15,8 +16,9 @@ dbt_snowflake:
       warehouse: "{{ env_var('DBT_SNOWFLAKE_WAREHOUSE') }}"
       schema: "{{ env_var('DBT_SNOWFLAKE_SCHEMA') }}"
       threads: 1
-      connect_timeout: 45 # Timeout in seconds
+      connect_timeout: 30
+      retries: 3
       retry_on_database_errors: true
       client_session_keep_alive: true
       # FIXME: 本番NG 認証しない
-      insecure_mode: true
+      # insecure_mode: true
